<resources>
    <string name="app_name">FiveCalendar</string>
    <string name="title_activity_tarea">TareaActivity</string>
    <string name="horario">Horario</string>
    <string name="abrir_calendario">Abrir Calendario</string>
    <string name="anadir_tarea">Añadir Tarea</string>
    <string name="ver_semana">Ver Semana</string>
    <string name="fecha_de_la_tarea">Fecha de la Tarea</string>
    <string name="titulo_de_la_tarea">Titulo de la Tarea</string>
    <string name="descripci_n">Descripción</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
...
