...
        android:onClick="anadirTarea"
        android:text="@string/anadir_tarea"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scroll_view"
        app:layout_constraintVertical_bias="0.81" />-->

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="57dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbarDia">

        <LinearLayout
            android:id="@+id/scroll_view_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
...
